# alice-hlt-librorc

./: .cproject  .project  CMakeLists.txt  CMakePda.txt  CPack.txt  GLOSSARY  Makefile  README  README.md  configure  crorc-driver.cbp  doxyfile.in  incr_channel_index.patch  ldpath.sh  librorc.cbp  prepare_build.sh  uninstall.sh
apps/: Makefile  dma_test.sh  env-debug.sh  env-release.sh  env-sim-debug.sh  env-sim.sh
apps/src/: Makefile  board_test.cpp  crorc_preallocator.cpp  dma_monitor.cpp  event_generation.h  event_handling.h  gtxdma.cpp  gtxdma_continuous.cpp  helper_functions.h  hlt_out_writer.cpp  pgdma.cpp  pgdma_continuous.cpp  qsfp.h  rorctl.cpp
apps/src/rorctl/: Makefile  crorc_flash.c  crorc_flash.h  definitions.h  rorctl.c
cmake_package_config/: CMakeLists.txt  librorc-config-version.cmake.in  librorc-config.cmake
fli/: CMakeLists.txt  flisock.c  flisock.h
include/: CMakeLists.txt  event_generation.h  event_handling.h  helper_functions.h  include_int.hh  librorc.h  librorc_bar_proto.hh  librorc_buffer.hh
include/librorc/: bar.hh  bar_impl_hw.hh  bar_impl_sim.hh  bar_proto.hh  buffer.hh  datareplaychannel.hh  ddl.hh  ddr3.hh  defines.hh  device.hh  diu.hh  dma_channel.hh  dma_channel_ddl.hh  dma_channel_pg.hh  documentation.dox  error.hh  event_generator.hh  event_sanity_checker.hh  event_stream.hh  eventfilter.hh  fastclusterfinder.hh  flash.hh  gtx.hh  gtx_event_stream.hh  high_level_event_stream.hh  include_ext.hh  include_int.hh  link.hh  microcontroller.hh  patterngenerator.hh  pg_event_stream.hh  refclk.hh  registers.h  sim_bar.hh  siu.hh  sysfs_handler.hh  sysmon.hh
librorc/: CMakeLists.txt  Makefile  Makefile.old  configure.sh  librorc.cbp  prepare_build.sh
librorc/doc/: librorc.config
librorc/include/: event_handling.h  librorc.h  librorc_bar.hh  librorc_dma_channel.hh  librorc_flash.hh  librorc_registers.h  mti.h  sim_bar.hh
librorc/src/: Makefile  flisock.c  flisock.h  include_ext.hh  includes.hh  librorc_bar.cpp  librorc_bar.hh  librorc_bar_proto.hh  librorc_buffer.cpp  librorc_buffer.hh  librorc_device.cpp  librorc_device.hh  librorc_dma_channel.cpp  librorc_dma_channel.hh  librorc_flash.cpp  librorc_flash.hh  librorc_sysmon.cpp  librorc_sysmon.hh  rorcfs_bar.cpp  rorcfs_bar.hh  rorcfs_bar_includes.hh  rorcfs_buffer.cpp  rorcfs_buffer.hh  rorcfs_device.cpp  rorcfs_device.hh  rorcfs_dma_channel.cpp  rorcfs_dma_channel.hh  rorcfs_flash_htg.cpp  rorcfs_flash_htg.hh  rorcfs_sysmon.cpp  rorcfs_sysmon.hh  sim_bar.cpp  sim_bar.hh
librorc/tools_src/crorc_preallocator/: crorc_preallocator.cpp
librorc/tools_src/dma/: gtxdma_continuous.cpp  pgdma_continuous.cpp
librorc/tools_src/hlt_out_writer/: hlt_out_writer.cpp
rorcfs/: Makefile  rescan
rorcfs/include/: rorcfs.h
rorcfs/src/: base.c
scripts/: benchmark.sh  benchmark_hltout.sh  buffer.sh  change_link_rate.sh  pgdma.csv  program_all_fpgas_for_hwtest.sh  program_flash0.sh  rescan_pcie  rescan_pcie_bus.sh  start_hlt_in_diu.sh  start_hlt_out.sh  start_pgdma.sh  stop_hlt_in_diu.sh  stop_hlt_out.sh  stop_pgdma.sh
scripts/log/: dev0_ch0.err
src/: CMakeLists.txt  bar.cpp  bar_impl_hw.cpp  bar_impl_sim.cpp  buffer.cpp  datareplaychannel.cpp  ddl.cpp  ddr3.cpp  device.cpp  diu.cpp  dma_channel.cpp  dma_channel_ddl.cpp  dma_channel_pg.cpp  error.cpp  event_generator.cpp  event_sanity_checker.cpp  event_stream.cpp  eventfilter.cpp  fastclusterfinder.cpp  flash.cpp  gtx.cpp  gtx_event_stream.cpp  high_level_event_stream.cpp  librorc_bar.cpp  librorc_buffer.cpp  librorc_device.cpp  librorc_flash.cpp  librorc_sysmon.cpp  link.cpp  microcontroller.cpp  patterngenerator.cpp  pg_event_stream.cpp  refclk.cpp  sim_bar.cpp  siu.cpp  sysfs_handler.cpp  sysmon.cpp
tools_src/: CMakeLists.txt
tools_src/buffer_handling/: buffer_access_test.cpp  buffer_alloc_test.cpp  buffer_reconnect_test.cpp  bufferstats.cpp  crorc_preallocator.cpp  reportbufferdump.cpp
tools_src/crorc_fpga_ctrl/: class_crorc.cpp  class_crorc.hpp  crorc_fpga_ctrl.cpp
tools_src/crorc_preallocator/: crorc_preallocator.cpp
tools_src/dma/: dma_handling.cpp  dma_handling.hh  dma_in.cpp  dma_in_ddr3_mc.cpp  dma_in_fcf.cpp  dma_in_mc.cpp  dma_out.cpp  dma_out_mc.cpp  event_handling.h  gtxdma_continuous.cpp  helper_functions.h  pgdma_continuous.cpp  test.hh
tools_src/dma_monitor/: dma_monitor.cpp  hwpgdma_es_sweep.cpp
tools_src/hlt_out_writer/: dma_handling.cpp  dma_handling.hh  event_handling.h  helper_functions.h  hlt_out_writer.cpp  hlt_out_writer_mc.cpp
tools_src/hwtest/: board_to_board_test.cpp  board_to_board_test_modules.cpp  board_to_board_test_modules.hh  boardtest.cpp  boardtest_modules.cpp  boardtest_modules.hh  crorc-smbus-ctrl.cpp  crorc-smbus-ctrl.hh  ddr3_module_status.cpp  ddr3_tester_status.cpp  fanctrl.cpp  fmc_loopback_tester.cpp  fmc_tester.cpp  fmc_tester.hh  ledctrl.cpp  lvdsctrl.cpp  test_fmc.cpp
tools_src/linkctrl/: channeldump.cpp  ddlctrl.cpp  ddr3_data_replay.cpp  diuctrl.cpp  dmactrl.cpp  gtxctrl.cpp  pgctrl.cpp
tools_src/rorctl/: board_reset.cpp  crorc_ddr3ctrl.cpp  crorc_flash.cpp  crorc_i2c.cpp  crorc_reset.cpp  crorc_sensors.cpp  crorc_status_dump.cpp  i2c.cpp  qsfpctrl.cpp  refclkgenctrl.cpp  reset_error_counters.cpp  rorctl.cpp  ucctrl.cpp
tools_src/test/: allocate_buffer.cpp  mmap_buffer.cpp  mmap_perf.cpp  shm_perf.cpp  sysfs_test.cpp
