project(flisock)
SET(MSIM_INCLUDE $ENV{MODEL_SIM_ROOT}/include)
FIND_PATH(MTI_HEADER mti.h PATHS ${MSIM_INCLUDE})
IF (MTI_HEADER)
  INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include ${MTI_HEADER})
  add_library(fli SHARED flisock.c)
  INSTALL(TARGETS fli LIBRARY DESTINATION lib)
ELSE()
  MESSAGE(WARNING "Could not find mti.h in ${MSIM_INCLUDE}, skipping FLI...")
ENDIF()
